stoping the boxes from expanding to accept text

--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
         <div class="gridBox" id="0"></div>
         <div class="gridBox" id="1"></div>
         <div class="gridBox" id="2"></div>
-    <!-- </div> <!end of row 1 div--> 
+    <!-- </div>  -->
+    <!--end of row 1 div-->
 
     <!-- <div class="row2"> -->
         <div class="gridBox" id="3"></div>
         <div class="gridBox" id="4"></div>
         <div class="gridBox" id="5"></div>
-       <!--end of row 2 div-->
+    <!-- </div> -->
+    <!--end of row 2 div-->
 
     <!-- <div class="row3"> -->
         <div class="gridBox" id="6"></div>
         <div class="gridBox" id="7"></div>
         <div class="gridBox" id="8"></div>
-    <!-- </div> <!end of row 3 div-->
+    <!-- </div>  -->
+    <!--end of row 3 div-->
+
   </div> <!-- end of board div-->
 <!--use javascript to update the class on this so it either says X or O's turn????-->
 
