got color to swap between players

--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
         <div class="gridBox" id="6"></div>
         <div class="gridBox" id="7"></div>
         <div class="gridBox" id="8"></div>
-        <!--nesting players within main grid-->
+        <!--nesting players and message within main grid-->
+        <!-- <div class="gridBox" id="winnerMessage">
+
+        </div> -->
         <div class="gridBox" id="players">
             <div class="nestedPlayer1">
-              <div class="icons">
-                <i id="oneUser" class="far fa-user"></i>
+              <div class="icon1">
+                <i class="far fa-user"></i>
               </div><!--end of icons div-->
                 Player One: <input class="player1Details" type="text" />
                 <button class="player1Details">let's play!</button>
             </div><!--end of player 1 butt div-->
           <!--end of icons div-->
             <div class="nestedPlayer2">
-              <div class="icons">
-                <i id="twoUsers" class="far fa-user"></i>
-                <i id="twoUsers" class="far fa-user"></i>
+              <div class="icon2">
+                <i class="far fa-user"></i>
+                <i class="far fa-user"></i>
               </div>
                 Player Two: <input class="player2Details" type="text" />
                 <button class="player2Details">let's play!</button>
