added a non functional reset button and did all the CSS on that

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     </div> <!--end of grid div-->
     <div class="lowerGrid">
         <div class="winnerGrid" id="winnerMessage">
-            We have a winner!
+            <p>We have a winner!</p>
+            <button id="resetBoard" class="btn">Reset</button><!--reset button trying to create-->
             </div>
         <div class="drawGrid" id="drawMessage">
-            It's a draw.
+            <p>It's a draw.</p>
+            <button id="resetBoard" class="btn">Reset</button>
             </div>
         <div class="playerGrid" id="players">
             <div class="nestedPlayer1">
@@ -63,6 +65,8 @@
                   <input type="submit" id="player2button" value="Add Name"/>
                 </form>
         </div> <!--end of players ID div-->
+      <!-- <div class="board reset"></div> -->
+
       </div> <!--end of lower grid tag-->
 
   </div> <!-- end of board div-->
