--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <!--end of row 1 div-->
 
       <!-- <div class="row2"> -->
+          <div class="aniWinner">
+            <p>WINNER!<break><button id="resetBoard" class="btn">Reset</button></break></p>
+          </div>
           <div class="gridBox" id="3"></div>
           <div class="gridBox" id="4"></div>
           <div class="gridBox" id="5"></div>
