animated/effects the F out of my banners

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
       <!-- <div class="row2"> -->
           <div class="aniWinner">
-            <p>WINNER!<break><button id="resetBoard" class="btn">Reset</button></break></p>
+            <p>We have a winner!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
+          </div>
+          <div class="aniDraw">
+            <p>It's a draw!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
           </div>
           <div class="gridBox" id="3"></div>
           <div class="gridBox" id="4"></div>
@@ -39,14 +42,14 @@
           <!--nesting players  within main grid-->
       </div> <!--end of grid div-->
       <div class="lowerGrid">
-          <div class="winnerGrid" id="winnerMessage">
+          <!-- <div class="winnerGrid" id="winnerMessage">
               <p>We have a winner!</p>
-              <button id="resetBoard" class="btn">Reset</button><!--reset button trying to create-->
-              </div>
-          <div class="drawGrid" id="drawMessage">
+              <button id="resetBoard" class="btn">Reset</button><
+              </div> -->
+          <!-- <div class="drawGrid" id="drawMessage">
               <p>It's a draw.</p>
               <button id="resetBoard" class="btn">Reset</button>
-              </div>
+              </div> -->
           <div class="playerGrid" id="players">
               <div class="nestedPlayer1">
                 <div class="icon1">
