--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/style.css"rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <script src="js/jquery.js"></script>
+  <script src="js/lettering.js"></script>
   <script src="js/main.js"></script>
   <title>Project 0</title>
 </head>
