--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="container">
 
 
-  <h1 id="logo">Tic-Tac-Toe</h1>
+  <h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1>
 
     <div class="grid">
       <!-- <div class="row1"> -->
