fixing responsive bugs

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link href="css/stylecomp.css"rel="stylesheet" type="text/css"/>
+  <link href="css/style.css"rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <script src="js/jquery.js"></script>
-  <script src="js/maincomp.js"></script>
+  <script src="js/main.js"></script>
   <title>Project 0</title>
 </head>
 <body>
@@ -35,10 +35,10 @@
       <!-- <div class="row2"> -->
 
           <div class="aniWinner">
-            <p>We have a winner!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
+            <p>We have a winner!<button id="resetBoard" class=" resetty">Play Again!</button></p>
           </div>
           <div class="aniDraw">
-            <p>It's a draw!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
+            <p>It's a draw!<break><button id="resetBoard" class=" resetty">Play Again!</button></p>
           </div>
 
           <div class="gridBox" id="3"></div>
