prior to messing with one player mode

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
   <h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1>
 
+  <nav>
+    <a href="indexcomp.html">1 Player Mode</a>
+  </nav>
+
   <div class="upperP1">
     <p>P1<br /> Score:</p>
     <p class="score1"></p>
