--- a/indexcomp.html
+++ b/indexcomp.html
@@ -22,6 +22,10 @@
     <p>P2<br /> Score:</p>
     <p class="score2"></p>
   </div>
+  <div class="uppercomp">
+    <p>Computer<br /> Score:</p>
+    <p class="compScore"></p>
+  </div>
 
 
     <div class="grid">
@@ -68,7 +72,7 @@
                 <div class="icon1">
                   <i class="far fa-user"></i>
                 </div><!--end of icons div-->
-                <div id="form1"><button href="#" id="showForm1">Player 1</button></div>
+                <div id="form1"><button href="#" id="showForm1">1 Player</button></div>
                   <form id="player1form">
                     <input type="text" id="player1details" placeholder="Player One Name"/>
                     <input type="submit" id="player1button" value="Add Name"/>
@@ -79,7 +83,7 @@
                   <i class="far fa-user"></i>
                   <i class="far fa-user"></i>
                 </div><!--end of icons div-->
-              <div id="form2"><button href="#" id="showForm2">Player 2</button></div>                             <form id="player2form">
+              <div id="form2"><button href="#" id="showForm2">2 Players</button></div>                             <form id="player2form">
                     <input type="text" id="player2details" placeholder="Player Two Name"/>
                     <input type="submit" id="player2button" value="Add Name"/>
                   </form>
