have just linked two seperate projects, one for one player and one for two player. one player mode not functional yet so easy to unlink from this stage

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <div id="container">
 
 
-  <h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1>
+  <a href="index.html"><h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1></a>
 
   <nav>
-    <a href="indexcomp.html">1 Player Mode</a>
+    <a class="navi" href="indexcomp.html">Click for 1 Player Mode</a>
   </nav>
 
   <div class="upperP1">
