--- a/indexcomp.html
+++ b/indexcomp.html
@@ -12,7 +12,10 @@
 <div id="container">
 
 
-  <h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1>
+  <a href="index.html"><h1 class="logo"><div class="tic">Tic-</div><div class="tac">Tac-</div><div class="toe">Toe</div></h1></a>
+  <nav>
+    <a class="navi" href="indexcomp.html">click for 2 Player Mode</a>
+  </nav>
 
   <div class="upperP1">
     <p>P1<br /> Score:</p>
