final commit unless i can work out how to make computer play

--- a/indexcomp.html
+++ b/indexcomp.html
@@ -22,7 +22,7 @@
     <p class="score1"></p>
   </div>
   <div class="upperP2">
-    <p>P2<br /> Score:</p>
+    <p>TTToemenator<br /> Score:</p>
     <p class="score2"></p>
   </div>
   <div class="uppercomp">
@@ -86,10 +86,6 @@
                   <i class="far fa-user"></i>
                   <i class="far fa-user"></i>
                 </div><!--end of icons div-->
-              <div id="form2"><button href="#" id="showForm2">2 Players</button></div>                             <form id="player2form">
-                    <input type="text" id="player2details" placeholder="Player Two Name"/>
-                    <input type="submit" id="player2button" value="Add Name"/>
-                  </form>
           </div> <!--end of players ID div-->
         <!-- <div class="board reset"></div> -->
 
