added name reading function to score card thing

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </nav>
 
   <div class="upperP1">
-    <p>P1<br /> Score:</p>
+    <span class="p1Name"></span> <span>Score:</span>
     <p class="score1"></p>
   </div>
   <div class="upperP2">
-    <p>P2<br /> Score:</p>
+    <span class="p2Name"></span> <span>Score:</span>
     <p class="score2"></p>
   </div>
 
