--- a/indexcomp.html
+++ b/indexcomp.html
@@ -18,7 +18,7 @@
   </nav>
 
   <div class="upperP1">
-    <p>P1<br /> Score:</p>
+    <p class="myName"></p> <span></span>Score:</span>
     <p class="score1"></p>
   </div>
   <div class="upperP2">
