got the random play working with help!

--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
 
 
     <div class="grid">
-      <!-- <div class="row1"> -->
+      <!-- <"row1"> -->
           <div class="gridBox" id="0"></div>
           <div class="gridBox" id="1"></div>
           <div class="gridBox" id="2"></div>
-      <!-- </div>  -->
-      <!--end of row 1 div-->
 
-      <!-- <div class="row2"> -->
+      <!-- <"row2"> -->
 
           <div class="aniWinner">
             <p>We have a winner!<button id="resetBoard" class=" resetty">Play Again!</button></p>
@@ -48,25 +46,14 @@
           <div class="gridBox" id="3"></div>
           <div class="gridBox" id="4"></div>
           <div class="gridBox" id="5"></div>
-      <!-- </div> -->
-      <!--end of row 2 div-->
 
-      <!-- <div class="row3"> -->
+      <!-- <"row3"> -->
           <div class="gridBox" id="6"></div>
           <div class="gridBox" id="7"></div>
           <div class="gridBox" id="8"></div>
-          <!--nesting players  within main grid-->
       </div> <!--end of grid div-->
 
       <div class="lowerGrid">
-          <!-- <div class="winnerGrid" id="winnerMessage">
-              <p>We have a winner!</p>
-              <button id="resetBoard" class="btn">Reset</button><
-              </div> -->
-          <!-- <div class="drawGrid" id="drawMessage">
-              <p>It's a draw.</p>
-              <button id="resetBoard" class="btn">Reset</button>
-              </div> -->
           <div class="playerGrid" id="players">
               <div class="nestedPlayer1">
                 <div class="icon1">
