changed button on 1 player from reset to play again

--- a/indexcomp.html
+++ b/indexcomp.html
@@ -41,7 +41,7 @@
 
       <!-- <"row2"> -->
           <div class="aniWinner">
-            <p>We have a winner!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
+            <p>We have a winner!<break><button id="resetBoard" class=" resetty">Play Again!</button></break></p>
           </div>
           <div class="aniDraw">
             <p>It's a draw!<break><button id="resetBoard" class=" resetty">Reset</button></break></p>
